[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "meteora-dlmm"
version = "0.4.0"
description = "Lamport-exact Meteora DLMM swap-quote library, validated against the on-chain program."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "nirkt" }]
keywords = ["solana", "meteora", "dlmm", "defi", "amm", "quote", "liquidity", "token-2022"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/nirkt/meteora-dlmm-py"
Repository = "https://github.com/nirkt/meteora-dlmm-py"
Issues = "https://github.com/nirkt/meteora-dlmm-py/issues"
Changelog = "https://github.com/nirkt/meteora-dlmm-py/blob/main/CHANGELOG.md"

[project.optional-dependencies]
rpc = ["solana>=0.30"]

[tool.setuptools]
packages = ["meteora_dlmm"]

[tool.setuptools.package-data]
meteora_dlmm = ["py.typed", "_reference.json"]
